tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-enum-close.ari
enum Broken {
  A
fn after() -> i64 {
  return 6;
}
